alignment issue in nav.scss

--- a/app/static/css/modules/nav.scss
+++ b/app/static/css/modules/nav.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 nav {
-  padding: 0.5em 0.5em 0em 0.5em;
+  padding: 0.5em 0.5em 0em 0em;
   font-size: 1.5em;
 
   .inner {
